--- a/config.ini
+++ b/config.ini
@@ -5,13 +5,13 @@ SFTP_HOST = ip/domain_name
 SFTP_USER = user_name
 SFTP_DIR = dir_name
 SFTP_PORT = 22
-#SFTP_PASSWD should be added as enviornmental variable 
+#SFTP_PASSWD should be added as an enviornmental variable 
 # Eg   $: export SFTP_PASSWD = "your_sftp_password"
 
 [S3_Details]
 
 BUCKT_NAME = bucketname
-#AWS API KEY and SECRET should be added as enviornmental variable 
+#AWS API KEY and SECRET should be added as an environmental variable 
 # export AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
 # export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 # export AWS_DEFAULT_REGION=us-west-2
